prestart 스크립트 추가

--- a/pas-server/package.json
+++ b/pas-server/package.json
@@ -9,6 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "prestart": "nest build",
     "start": "node dist/main",
     "start:dev-bak": "nest start --watch",
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
