--- a/pas-server/package.json
+++ b/pas-server/package.json
@@ -9,12 +9,12 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "npm run build && node dist/src/main.js",
+    "start": "node dist/src/main.js",
     "start:dev-bak": "nest start --watch",
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main.js",
-    "postinstall": "npm run prestart:prod",
+    "postinstall": "tsc --sourceMap false",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
