--- a/pas-client/package.json
+++ b/pas-client/package.json
@@ -19,6 +19,7 @@
     "codemirror": "^5.62.3",
     "gravatar": "^1.8.2",
     "jwt-decode": "^3.1.2",
+    "process": "^0.11.10",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-codemirror2": "^7.2.1",
@@ -65,7 +66,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "start:dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --env development",
+    "start:dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" NODE_ENV=development webpack serve --env development",
     "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" NODE_ENV=production webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
